--- a/appdaemon/widgets/camera.yaml
+++ b/appdaemon/widgets/camera.yaml
@@ -4,9 +4,10 @@ fields:
   frame_src: ""
   img_src: ""
   frame_style: '{{frame_style}}'
+  token: ""
 icons: []
 static_css:
   title_style: $camera_title_style
-  widget_style: $camera_widget_style
+  widget_style: $camera_widget_style  
 css: []
 static_icons: []
