--- a/appdaemon/widgets/iframe.yaml
+++ b/appdaemon/widgets/iframe.yaml
@@ -4,6 +4,7 @@ fields:
   frame_src: ""
   img_src: ""
   frame_style: '{{frame_style}}'
+  token: ""
 icons: []
 static_css:
   title_style: $iframe_title_style
